fix scrollbar

--- a/nav-footer-home.css
+++ b/nav-footer-home.css
@@ -20,7 +20,7 @@
 
 
 
-@media screen and (min-width: 601px) and (max-width: 768px){
+@media screen and (min-width: 601px) and (max-width: 900px){
 
 .nav-main{
     display: none;
